--- a/main.html
+++ b/main.html
@@ -8,6 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<table border="1" style=width:10px>
+		<th>roll number</th>
+		<th>name</th>
+		<tr>
+			<td>1</td>
+			<td>Ajees</td>
+		</tr>
+		<tr>
+			<td>2</td>
+			<td>Haffiz</td>
+		</tr>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
