--- a/main.html
+++ b/main.html
@@ -8,7 +8,8 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border="1" style=width:10px>
+	<table>
+		<thead>
 		<th>roll number</th>
 		<th>name</th>
 		<tr>
@@ -19,6 +20,7 @@
 			<td>2</td>
 			<td>Haffiz</td>
 		</tr>
+	</thead>
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
