--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 	<!-- the entire body must be written by student -->
 	<table>
 		<thead>
+			<tbody>
 		<th>roll number</th>
 		<th>name</th>
 		<tr>
@@ -20,6 +21,7 @@
 			<td>2</td>
 			<td>Haffiz</td>
 		</tr>
+	</tbody>
 	</thead>
 	</table>
     <script type="text/javascript" src="./script.js">
