--- a/main.html
+++ b/main.html
@@ -8,21 +8,19 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table>
-		<thead>
-			<tbody>
-		<th>roll number</th>
-		<th>name</th>
+	<table border="1">
+		<tbody>
+		<th>Roll number</th>
+		<th>Name</th>
 		<tr>
-			<td>1</td>
-			<td>Ajees</td>
+		<td>1</td>
+		<td>Ajees</td>	
 		</tr>
 		<tr>
 			<td>2</td>
 			<td>Haffiz</td>
 		</tr>
-	</tbody>
-	</thead>
+		</tbody>	
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
