--- a/main.html
+++ b/main.html
@@ -9,6 +9,7 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<table border="1">
+		<thead>
 		<tbody>
 		<th>Roll number</th>
 		<th>Name</th>
@@ -20,6 +21,7 @@
 			<td>2</td>
 			<td>Haffiz</td>
 		</tr>
+		</thead>
 		</tbody>	
 	</table>
     <script type="text/javascript" src="./script.js">
