--- a/main.html
+++ b/main.html
@@ -8,21 +8,21 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-	<table border="1">
+	<table>
 		<thead>
-		<tbody>
-		<th>Roll number</th>
-		<th>Name</th>
-		<tr>
-		<td>1</td>
-		<td>Ajees</td>	
-		</tr>
-		<tr>
-			<td>2</td>
-			<td>Haffiz</td>
-		</tr>
+			<th>Roll number</th>
+			<th>name</th>
 		</thead>
-		</tbody>	
+		<tbody>
+			<tr>
+				<td>1</td>
+				<td>Ajees</td>
+			</tr>
+			<tr>
+				<td>2</td>
+				<td>Haffiz</td>
+			</tr>
+		</tbody>
 	</table>
     <script type="text/javascript" src="./script.js">
 </script>
